# QT_Project

./: .gitignore.txt  README.md
First_QtQmlApp/: ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  Sender.h  main.cpp  receiver.cpp  receiver.h
GenerateRandomNumber/: BackEnd.cpp  BackEnd.h  CMakeLists.txt  main.cpp
IntegrationCplusplusinQmlcode/: CMakeLists.txt  MathOperation.cpp  MathOperation.h  main.cpp
My_Simple_Notepad/: CMakeLists.txt  Resource.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
SimpleButtonApp/: CMakeLists.txt  main.cpp
Songplayer/: .gitignore.txt  AudioInfoBox.qml  CMakeLists.txt  ImageButton.qml  Main.qml  PlayerController.h  main.cpp
